# knot

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  PRD.md  README.md  vcpkg.json
.github/workflows/: ci.yml
docs/: architecture.md  benchmarks.md  journal.md  phases.md  raft-design.md  storage-design.md
include/knot/common/: crc32.h
include/knot/raft/: command.h  log.h  messages.h  node.h  persister.h  state.h  tcp_transport.h  transport.h  types.h  wire.h
include/knot/server/: client_server.h
include/knot/storage/: engine.h  memtable.h  sstable.h  wal.h
proto/: knot.proto
src/cli/: knotctl.cpp
src/common/: crc32.cpp
src/raft/: command.cpp  log.cpp  node.cpp  persister.cpp  tcp_transport.cpp  transport.cpp  wire.cpp
src/server/: client_server.cpp  main.cpp
src/storage/: engine.cpp  memtable.cpp  sstable.cpp  wal.cpp
tests/unit/: engine_test.cpp  memtable_test.cpp  raft_client_test.cpp  raft_command_test.cpp  raft_e2e_test.cpp  raft_log_test.cpp  raft_node_test.cpp  raft_persister_test.cpp  raft_tcp_test.cpp  raft_transport_test.cpp  raft_wire_test.cpp  sstable_test.cpp  wal_test.cpp
